Добавил allure.properties и поправил pom